# braids-rl

./: .gitignore  README.md  benchmark.ipynb  benchmark_tiny.ipynb  braid.py  generate_data.ipynb  generate_data.py  pyproject.toml
code/: braid.py  braid_engine.py
data/: test.txt  test_n3_c12_m10.txt  test_n3_c12_m25.txt  test_n3_c12_m5.txt  test_n3_c16_m10.txt  test_n3_c16_m100.txt  test_n3_c16_m50.txt  test_n3_c18_m10.txt  test_n3_c18_m25.txt  test_n3_c18_m5.txt  test_n3_c24_m10.txt  test_n3_c24_m100.txt  test_n3_c24_m50.txt  test_n3_c6_m10.txt  test_n3_c6_m25.txt  test_n3_c6_m5.txt  test_n3_c8_m10.txt  test_n3_c8_m100.txt  test_n3_c8_m50.txt  test_n5_c12_m10.txt  test_n5_c12_m25.txt  test_n5_c12_m5.txt  test_n5_c16_m10.txt  test_n5_c16_m100.txt  test_n5_c16_m50.txt  test_n5_c18_m10.txt  test_n5_c18_m25.txt  test_n5_c18_m5.txt  test_n5_c24_m10.txt  test_n5_c24_m100.txt  test_n5_c24_m50.txt  test_n5_c6_m10.txt  test_n5_c6_m25.txt  test_n5_c6_m5.txt  test_n5_c8_m10.txt  test_n5_c8_m100.txt  test_n5_c8_m50.txt  test_n7_c12_m10.txt  test_n7_c12_m25.txt  test_n7_c12_m5.txt  (+18 more)
data/finetune/: ft_n3_c16_m10.txt  ft_n3_c16_m100.txt  ft_n3_c16_m50.txt  ft_n3_c24_m10.txt  ft_n3_c24_m100.txt  ft_n3_c24_m50.txt  ft_n3_c8_m10.txt  ft_n3_c8_m100.txt  ft_n3_c8_m50.txt  ft_n5_c16_m10.txt  ft_n5_c16_m100.txt  ft_n5_c16_m50.txt  ft_n5_c24_m10.txt  ft_n5_c24_m100.txt  ft_n5_c24_m50.txt  ft_n5_c8_m10.txt  ft_n5_c8_m100.txt  ft_n5_c8_m50.txt  ft_n7_c16_m10.txt  (+8 more)
src/: agent_metrics.py  braid.py  braid_agent.py  braid_env.py  braid_generator.py  callbacks.py  config.py  optimal_solver.py
(+63 files in other folders)
