[project]
name = "braids-rl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.2",
    "sb3-contrib>=2.7.0",
    "shimmy>=2.0.0",
    "stable-baselines3>=2.7.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]
